# gotta-go-fast

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  book.toml  cabal.project  cabal.project.freeze  perfbook.cabal
app/: Main.hs
book/: 404.html  CONTRIBUTORS.html  index.html  print.html  searchindex.js  searchindex.json
book-src/: SUMMARY.md
book-src/01-about/: About00.md
book-src/02-gotta_go_fast/: Optimizations03.md
book/01-about/: 00About.html  01Tools.html
book/02-gotta_go_fast/: 00GottaGoFast.md.html  01Evaluation.html  02Allocation.html  03Pptimizations.html
book/03-classifications/: 00Classifications.html
src/: Generator.hs
src/Book/About01/: About00.lhs  Tools01.lhs
src/Book/Chapter01/: About00.hs  Tools01.hs
src/Book/Chapter02/: Allocation02.hs  Evaluation01.hs  GottaGoFast00.hs  Optimisations03.hs
src/Book/Chapter03/: Classification03.hs
src/Book/Chapter04/: CostCenterProfiling01.hs  HeapProfiling02.hs  Profiling00.hs
src/Book/Chapter05/: Testing00.hs
src/Book/Chapter06/: Architecture04.hs  CaseStudies00.hs  Parsing01.hs  Streaming02.hs  Web03.hs
src/Book/Chapter07/: Next00.hs
