cabal-version:      3.4
name:               perfbook
version:            0.1.0.0
license:            CC-BY-4.0
license-file:       LICENSE
author:             Hécate Moonlight
maintainer:         hecate+github@glitchbra.in
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common ghc-options
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -fhide-source-paths -Wno-unused-do-bind -fshow-hole-constraints
    -Wno-unticked-promoted-constructors -Werror=unused-imports
    -Wunused-packages

common rts-options
  ghc-options: -rtsopts -threaded "-with-rtsopts=-N -T"

common extensions
  default-extensions:
    NoStarIsType
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PackageImports
    PolyKinds
    QuasiQuotes
    RecordWildCards
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language:   GHC2021

library
    import:           ghc-options
    import:           extensions
    exposed-modules:
      Generator
      Book.Chapter01.About00
      Book.Chapter01.Tools01
      Book.Chapter02.GottaGoFast00
      Book.Chapter02.Evaluation01
      Book.Chapter02.Allocation02
      Book.Chapter02.Optimisations03
    build-depends:
      , base ^>=4.16.3.0
      , literatex
      , shake
      , directory
      , containers
      , strict
    hs-source-dirs:   src
    default-language: GHC2021

executable perfbook-gen
    import:           ghc-options
    import:           rts-options
    import:           extensions
    main-is:          Main.hs
    build-depends:
      , base ^>=4.16.3.0
      , perfbook

    hs-source-dirs:   app
    default-language: GHC2021
